[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tracked-mapping"
version = "0.1.0"
description = "Dict/list wrappers that track key access for reporting unconsumed data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Eremey Valetov" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/valetov/tracked-mapping"

[tool.pytest.ini_options]
testpaths = ["tests"]
